bugfix: a workaround to solve the scrollbar issue in safari (#833)

--- a/packages/ringcentral-widgets/components/CallItem/styles.scss
+++ b/packages/ringcentral-widgets/components/CallItem/styles.scss
@@ -17,7 +17,6 @@
 .wrapper {
   display: block;
   position: relative;
-  background: #fff;
   height: 69px;
   width: 100%;
   margin-bottom: 1px;
